wip[backend]: added mocked endpoints for mts forms parser
